--- a/style.css
+++ b/style.css
@@ -1,182 +1,149 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap');
-
+/* ===( CODE SABEEL )=== */
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
-html,body{
-    display: grid;
-    height: 100%;
-    width: 100%;
-    place-items: center;
-    background: -webkit-linear-gradient(left, #9896F0,#FBC8D5);
-}
-::selection{
-    background: #12e8f0;
-    color: #fff;
-}
-.wrapper{
-    overflow: hidden;
-    max-width: 390px;
-    background: #fff;
-    padding: 30px;
-    border-radius: 5px;
-    box-shadow: 0px 15px 20px rgba(0,0,0,0.1);
-}
-.wrapper .title-text{
+
+section{
     display: flex;
-    width: 200%;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    background-image: url(bg.jpg);
+    background-size: cover;
+    background-position: center;
+    animation: animateBg 5s linear infinite;
 }
-.wrapper .title{
-    width: 50%;
-    font-size: 35px;
-    font-weight: 600;
-    text-align: center;
-    transition: all 0.6s cubic-bezier(0.68,-0.55,0.265,1.55);
+
+@keyframes animateBg{
+    100%{
+        filter: hue-rotate(360deg);
+    }
 }
-.wrapper .slide-controls{
+
+.login-box{
     position: relative;
+    width: 400px;
+    height: 450px;
+    background: transparent;
+    border: 2px solid rgba(255, 255, 255, .5);
+    border-radius: 20px;
     display: flex;
-    height: 50px;
-    width: 100%;
-    overflow: hidden;
-    margin: 30px 0 10px 0;
-    justify-content: space-between;
-    border: 1px solid lightgrey;
-    border-radius: 5px;
+    justify-content: center;
+    align-items: center;
+    backdrop-filter: blur(15px);
 }
-.slide-controls .slide{
-    height: 100%;
-    width: 100%;
+
+h2{
+    font-size: 2em;
     color: #fff;
-    font-size: 18px;
-    font-weight: 500;
     text-align: center;
-    line-height: 48px;
-    cursor: pointer;
-    z-index: 1;
-    transition: all 0.6s ease;
 }
-.slide-controls label.signup{
-    color: #000;
+
+.input-box{
+    position: relative;
+    width: 310px;
+    margin: 30px 0;
+    border-bottom: 2px solid #fff;
 }
-.slide-controls .slider-tab{
+
+.input-box label{
     position: absolute;
-    height: 100%;
-    width: 50%;
-    left: 0;
-    z-index: 0;
-    border-radius: 5px;
-    background: -webkit-linear-gradient(left, #FBEE97, #ADEDD5);
-    transition: all 0.6s cubic-bezier(0.68,-0.55,0.265,1.55);
-}
-input[type="radio"]{
-    display: none;
-}
-#signup:checked ~ .slider-tab{
-    left: 50%;
-}
-#signup:checked ~ label.signup{
+    top: 50%;
+    left: 5px;
+    transform: translateY(-50%);
+    font-size: 1em;
     color: #fff;
-    cursor: default;
-    user-select: none;
+    pointer-events: none;
+    transition: .5s;
 }
-#signup:checked ~ label.login{
-    color: #000;
+
+.input-box input:focus~label,
+.input-box input:valid~label{
+    top: -5px;
 }
-#login:checked ~ label.signup{
-    color: #000;
-}
-#login:checked ~ label.login{
-    cursor: default;
-    user-select: none;
-}
-.wrapper .form-container{
+
+.input-box input{
     width: 100%;
-    overflow: hidden;
-}
-.form-container .form-inner{
-    display: flex;
-    width: 200%;
-}
-.form-container .form-inner form{
-    width: 50%;
-    transition: all 0.6s cubic-bezier(0.68,-0.55,0.265,1.55);
-}
-.form-inner form .field{
     height: 50px;
-    width: 100%;
-    margin-top: 20px;
-}
-.form-inner form .field input{
-    height: 100%;
-    width: 100%;
+    background: transparent;
+    border: none;
     outline: none;
-    padding-left: 15px;
-    border-radius: 5px;
-    border: 1px solid lightgrey;
-    border-bottom-width: 2px;
-    font-size: 17px;
-    transition: all 0.3s ease;
+    font-size: 1em;
+    color: #fff;
+    padding: 0 35px 0 5px;
 }
-.form-inner form .field input:focus{
-    border-color: #12e8f0;
+
+.input-box .icon{
+    position: absolute;
+    right: 8px;
+    color: #fff;
+    font-size: 1.2em;
+    line-height: 57px;
 }
-.form-inner form .field input::placeholder{
-    color: #999;
-    transition: all 0.3s ease;
+
+.remember-forget{
+    margin: -15px 0 15px;
+    font-size: .9em;
+    color: #fff;
+    display: flex;
+    justify-content: space-between;
 }
-form .field input:focus::placeholder{
-    color: #b3b3b3;
+
+.remember-forget label input{
+    margin: right 3px;
 }
-.form-inner form .pass-link{
-    margin-top: 5px;
-}
-.form-inner form .signup-link{
-    text-align: center;
-    margin-top: 30px;
-}
-.form-inner form .pass-link a,
-.form-inner form .signup-link a{
-    color: #0e45dd;
+
+.remember-forget a{
+    color: #fff;
     text-decoration: none;
 }
-.form-inner form .pass-link a:hover,
-.form-inner form .signup-link a:hover{
+
+.remember-forget a:hover{
     text-decoration: underline;
 }
-form .btn{
-    height: 50px;
+
+button{
     width: 100%;
-    border-radius: 5px;
-    position: relative;
-    overflow: hidden;
-}
-form .btn .btn-layer{
-    height: 100%;
-    width: 300%;
-    position: absolute;
-    left: -100%;
-    background: -webkit-linear-gradient(right, #FBEE97, #ADEDD5, #FBEE97, #ADEDD5);
-    border-radius: 5px;
-    transition: all 0.4s ease;;
-}
-form .btn:hover .btn-layer{
-    left: 0;
-}
-form .btn input[type="submit"]{
-    height: 100%;
-    width: 100%;
-    z-index: 2;
-    position: relative;
-    background: none;
+    height: 40px;
+    background: #fff;
     border: none;
-    color: #fff;
-    padding-left: 0;
-    border-radius: 10px;
-    font-size: 20px;
-    font-weight: 500;
+    outline: none;
+    border-radius: 40px;
     cursor: pointer;
+    font-size: 1em;
+    color: #000;
+    font-weight: 500;
+}
+
+.register-link{
+    font-size: .9em;
+    color: #fff;
+    text-align: center;
+    margin: 25px 0 10px;
+}
+
+.register-link p a{
+    color: #fff;
+    text-decoration: none;
+    font-weight: 600;
+}
+
+.register-link p a:hover{
+    text-decoration: underline;
+}
+
+@media (max-width:360px){
+    .login-box{
+        width: 100%;
+        height: 100vh;
+        border: none;
+        border-radius: 0;
+    }
+    .input-box{
+        width: 290px;
+    }
 }
